Top Nav flickering fix

--- a/a/css/scss/components/_primary-nav.scss
+++ b/a/css/scss/components/_primary-nav.scss
@@ -54,6 +54,11 @@
         display: inline-block;
 
         &.multi {
+          padding-bottom: .8rem;
+
+          > .link {
+            padding-bottom: 1.6rem;
+          }
 
           > a:hover {
             border: 0;
@@ -80,7 +85,7 @@
             h4,
             h5 {
               margin-bottom: 1rem;
-              opacity: .8;
+              opacity: 0;
               color: $text-color;
               font-family: $display-font;
               font-size: 1.8rem;
@@ -141,6 +146,11 @@
 
                 &::after {
                   height: 100%;
+                }
+
+                h4,
+                h5 {
+                  opacity: .8;
                 }
             }
           }
